k8s/02-infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-postgres
  namespace: securebank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securebank-postgres
  template:
    metadata:
      labels:
        app: securebank-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: securebank-postgres
  namespace: securebank
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: securebank-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-zookeeper
  namespace: securebank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securebank-zookeeper
  template:
    metadata:
      labels:
        app: securebank-zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.6.1
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: securebank-zookeeper
  namespace: securebank
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: securebank-zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-kafka
  namespace: securebank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securebank-kafka
  template:
    metadata:
      labels:
        app: securebank-kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: securebank-kafka
  namespace: securebank
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: securebank-kafka
